--- a/dziennik_elektroniczny.Application/dziennik_elektroniczny.Application.csproj
+++ b/dziennik_elektroniczny.Application/dziennik_elektroniczny.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\dziennik_elektroniczny.Infrastructure\dziennik_elektroniczny.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
