--- a/Aplikacja_webowa_dziennik_elektroniczny/appsettings.json
+++ b/Aplikacja_webowa_dziennik_elektroniczny/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Dziennik;TrustServerCertificate=True;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=test;Username=postgres;Password=1234"
   },
   "Logging": {
     "LogLevel": {
