--- a/Aplikacja_webowa_dziennik_elektroniczny/Aplikacja_webowa_dziennik_elektroniczny.csproj
+++ b/Aplikacja_webowa_dziennik_elektroniczny/Aplikacja_webowa_dziennik_elektroniczny.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Npgsql" Version="8.0.4" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
@@ -27,12 +28,6 @@
   <ItemGroup>
     <ProjectReference Include="..\dziennik_elektroniczny.Application\dziennik_elektroniczny.Application.csproj" />
     <ProjectReference Include="..\dziennik_elektroniczny.Infrastructure\dziennik_elektroniczny.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Include="..\.dockerignore">
-      <Link>.dockerignore</Link>
-    </Content>
   </ItemGroup>
 
 </Project>
