--- a/Aplikacja_webowa_dziennik_elektroniczny/appsettings.json
+++ b/Aplikacja_webowa_dziennik_elektroniczny/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=db;Port=5432;Database=test;Username=postgres;Password=1234"
-    //"DefaultConnection": "Server=localhost;Port=5432;Database=test;Username=postgres;Password=1234" connetctionstring do aplikacji uruchomionej w IDE, powyzszy sluzy do łączności z bazą w dockerze
+    //"DefaultConnection": "Host=db;Port=5432;Database=test;Username=postgres;Password=1234"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=test;Username=postgres;Password=1234" 
     //Nalezy zostawic jeden, a zakomentowac drugi w zaleznosci od potrzeb
   },
   "Logging": {
